Add one new section

--- a/src/pages/2023/partnership.mdx
+++ b/src/pages/2023/partnership.mdx
@@ -75,6 +75,41 @@ Have questions or need more information? Please contact sponsorship@ostem.org.
 
 ---
 
+### <div>oSTEM Partner Standards</div>
+
+<div>
+  Minimum requirement to be a sponsor or exhibitor at the 13th Annual 
+Conference:
+
+<div className="my-4">
+
+- Publicly available nondiscrimination policy including sexual orientation and
+  gender identity and expression.
+- Has hosted at least 1 LGBTQ+ focused competency training including pronoun
+  usage for recruiters within the last 3 years.
+
+</div>
+
+**WHY?**
+
+We want our members to feel confident that they’re engaging with prospective
+employers who are committed to LGBTQ-inclusive policies and practices.
+
+**Don’t feel discouraged if you haven’t met these requirements. oSTEM can help
+you get there!**
+
+oSTEM hosted trainings are available for OAC members free of charge and
+available to non-OAC members at a charge. Please give at least 3-week notice for
+scheduling.
+
+Contact sponsorship@ostem.org to learn more.
+
+<br />
+
+---
+
+</div>
+
 <div className="mt-6">
   <div className="text-center text-3xl font-bold">
     Thank you to our 2022 Exhibitors!
