Update relative imports for archived pages

--- a/src/pages/archive/2021/awards.mdx
+++ b/src/pages/archive/2021/awards.mdx
@@ -1,5 +1,5 @@
-import { CTAButton } from "../../components/button/CTAButton";
-import { SiteLayout } from "../../components/layout/SiteLayout";
+import { CTAButton } from "../../../components/button/CTAButton";
+import { SiteLayout } from "../../../components/layout/SiteLayout";
 
 <SiteLayout>
 
@@ -19,7 +19,7 @@ oSTEM's awards programs recognize the achievements of our members, chapters, and
         <svg xmlns="http://www.w3.org/2000/svg" className="h-6 w-6 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
         </svg>
-        2021 Award Nominations are currently&nbsp;<strong>open</strong>!
+        2021 Award Nominations are currently&nbsp;<strong>closed</strong>.
     </p>
 </div> 
 
