--- a/src/pages/archive/2021/rfp.mdx
+++ b/src/pages/archive/2021/rfp.mdx
@@ -1,6 +1,6 @@
-import { CTAButton } from "../../components/button/CTAButton";
-import { SiteLayout } from "../../components/layout/SiteLayout";
-import { TopicSquare } from "../../components/rfp/TopicSquare";
+import { CTAButton } from "../../../components/button/CTAButton";
+import { SiteLayout } from "../../../components/layout/SiteLayout";
+import { TopicSquare } from "../../../components/rfp/TopicSquare";
 
 <SiteLayout title="Request for Proposals">
 
