--- a/src/pages/archive/2021/home.mdx
+++ b/src/pages/archive/2021/home.mdx
@@ -1,8 +1,8 @@
 import Image from "next/image"
 
-import { CTAButton } from "../../components/button/CTAButton";
-import { ConferenceCountdown } from "../../components/ConferenceCountdown";
-import { SiteLayout } from "../../components/layout/SiteLayout";
+import { CTAButton } from "../../../components/button/CTAButton";
+import { ConferenceCountdown } from "../../../components/ConferenceCountdown";
+import { SiteLayout } from "../../../components/layout/SiteLayout";
 
 <SiteLayout>
 
