Add banner image for partnerships page

--- a/src/pages/2023/partnership.mdx
+++ b/src/pages/2023/partnership.mdx
@@ -8,6 +8,15 @@ import Image from "next/image";
   <p className="text-5xl font-display font-black">Partnership Opportunities</p>
 </div>
 
+<Image
+  src="/images/partnership-banner-image.jpg"
+  alt=""
+  layout="responsive"
+  width="400"
+  height="167"
+  priority="true"
+/>
+
 <br />
 
 <div>
