--- a/src/pages/2023/awards.mdx
+++ b/src/pages/2023/awards.mdx
@@ -49,7 +49,7 @@ great submission.
 - Advisor of the Year - Individual **_New!_**
 
 </AwardSquare>
-<AwardSquare title="Sponsor Awards" borderColor="border-yellow-500" href="#sponsor-awards">
+<AwardSquare title="Partner Awards" borderColor="border-yellow-500" href="#sponsor-awards">
 
 - Strategic Alliance Award - Organization
 - Partner Excellence Award - Individual
@@ -168,7 +168,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
 
 <div className="text-bright-peach font-bold" id="sponsor-awards">
 
-## Sponsor Awards
+## Partner Awards
 
 </div>
 
