--- a/src/pages/2023/awards.mdx
+++ b/src/pages/2023/awards.mdx
@@ -127,7 +127,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
 
 <AwardCard
   title="oSTEM Rookie Chapter of the Year"
-  desc="This award celebrates the achievements made by those chapters who are only just getting started. The first years of any student organization can be difficult and a test of true staying power. For those student leaders who are able to navigate that time and accomplish change on their campus that reflects the oSTEM mission, we want to recognize you. If you feel that your chapter matches this description we encourage you to submit an application for this award."
+  desc="This award celebrates the achievements made by those chapters which are only just getting started. The first years of any student organization can be difficult and a test of true staying power. For those student leaders who are able to navigate that time and accomplish change on their campus that reflects the oSTEM mission, we want to recognize you. If you feel that your chapter matches this description we encourage you to submit an application for this award."
   elig={[
     "Must be a verified non-affiliate oSTEM Chapter of active status",
     "Must have been founded within two years of the submission of this application",
@@ -141,7 +141,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
 
 <AwardCard
   title="oSTEM Chapter Leader of the Year"
-  desc="This award recognizes the impact that strong, innovative, and passionate leaders have on oSTEM chapters. The guiding purpose of the oSTEM organization is to empower LGBTQ+ people in STEM to succeed personally, academically, and professionally by cultivating environments and communities that nurture innovation, leadership, and advocacy. Chapter leaders not only understand this mission but strive to embody it in their personal and professional lives. Whether they founded their chapter, created a tight knit community of members, or created a network of connections, we want to hear about it! If your chapter leader has made a significant effort toward achieving these goals on your campus and in your community we ask you to nominate them so they can be recognized for their efforts."
+  desc="This award recognizes the impact that strong, innovative, and passionate leaders have on oSTEM chapters. The guiding purpose of the oSTEM organization is to empower LGBTQ+ people in STEM to succeed personally, academically, and professionally by cultivating environments and communities that nurture innovation, leadership, and advocacy. Chapter leaders not only understand this mission but strive to embody it in their personal and professional lives. Whether they founded their chapter, created a tight-knit community of members, or created a network of connections, we want to hear about it! If your chapter leader has made a significant effort toward achieving these goals on your campus and in your community we ask you to nominate them so they can be recognized for their efforts."
   elig={[
     "Must be a chapter leader of a verified Standard oSTEM Chapter or Affiliate Chapter of active status in good standing with your Regional Coordinator",
     "Must be attending the oSTEM Annual Conference",
@@ -154,7 +154,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
 
 <AwardCard
   title="oSTEM Advisor of the Year"
-  desc="This award recognizes those advisors who have gone above and beyond in their support to one or more oSTEM chapters. The guiding purpose of the oSTEM organization is to empower LGBTQ+ people in STEM to succeed personally, academically, and professionally by cultivating environments and communities that nurture innovation, leadership, and advocacy. Our chapter's advisors support our chapters in succeeding in this mission. Their enthusiasm, advice and dedication is a role model for our chapters. If your advisor has made a significant effort toward achieving these goals on your campus and in your community we ask you to nominate them so they can be recognized for their effort."
+  desc="This award recognizes those advisors who have gone above and beyond in their support to one or more oSTEM chapters. The guiding purpose of the oSTEM organization is to empower LGBTQ+ people in STEM to succeed personally, academically, and professionally by cultivating environments and communities that nurture innovation, leadership, and advocacy. Our chapter's advisors support our chapters in succeeding in this mission. Their enthusiasm, advice, and dedication models the way for our chapters. If your advisor has made a significant effort toward achieving these goals on your campus and in your community we ask you to nominate them so they can be recognized for their effort."
   elig={[
     "Must be an advisor of a verified Standard oSTEM Chapter or Affiliate Chapter of active status in good standing with your Regional Coordinator",
     "Must be attending the oSTEM Annual Conference. (Winner receives 1 free professional registration + 3 free student registrations."
@@ -175,10 +175,10 @@ info@ostem.org or by contacting the individual team responsible for the award._
 <div>
 <AwardCard
   title="oSTEM Strategic Alliance Award"
-  desc="This award is presented to a current sponsoring organization, community partner, or grant provider of oSTEM who has demonstrated a strong dedication to oSTEM, LGBTQ+ people in STEM, and STEM education. They are recognized leaders in LGBTQ+ workplace or institutional inclusion. They are a consistent supporter of oSTEM, Inc. and regularly engage with and support oSTEM chapters. They are committed to and continually strive to understand the most effective methods for reaching equality for all people."
+  desc="This award is presented to a current sponsoring organization, community partner, or grant provider of oSTEM who has demonstrated a strong dedication to oSTEM, LGBTQ+ people in STEM, and STEM education. They are recognized leaders in LGBTQ+ workplace or institutional inclusion. They consistently support oSTEM, Inc. and regularly engage with and support oSTEM chapters. They are committed to and continually strive to understand the most effective methods for reaching equality for all people."
   elig={[
     "Must be a current sponsoring organization of oSTEM",
-    "Must be have a representative attending the oSTEM Annual Conference"
+    "Must have a representative attending the oSTEM Annual Conference"
   ]}
   borderColor="border-yellow-500"
   alert="Self-nominations are accepted and encouraged. Please only submit one nomination per organization. If you have any questions regarding this application, please contact us at sponsorship@ostem.org."
@@ -204,7 +204,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   desc="Support, a sense of belonging, and encouragement are key to employee growth, positive performance, and retention. Employee Networks have stepped in to fulfill these basic human needs through the creation of a community that supports employees, champions inclusion and diversity, and reaches out to better the community around them for all people. The vitality of these employee groups cannot be overstated, and the hard work they do deserves recognition. The oSTEM LGBTQ+ Employee Network of the Year Award highlights and applauds the work of an organization's employee network that embodies the oSTEM mission of empowering LGBTQ+ people in STEM to succeed personally, academically, and professionally through the cultivation of environments and communities that nurture innovation, leadership, and advocacy."
   elig={[
     "Must be a current sponsoring organization of oSTEM",
-    "Must be have a representative attending the oSTEM Annual Conferencee"
+    "Must have a representative attending the oSTEM Annual Conference"
   ]}
   borderColor="border-yellow-500"
   alert="Self-nominations are accepted and encouraged. Please only submit one nomination per organization. If you have any questions regarding this application, please contact us at sponsorship@ostem.org."
@@ -220,7 +220,8 @@ info@ostem.org or by contacting the individual team responsible for the award._
 </div>
 <AwardCard
   title="oSTEM Volunteer of the Year & Spotlights"
-  desc="Description Coming Soon"
+  desc="This award recognizes volunteers who have gone above and beyond to bring oSTEM to new heights in the last year. The Executive Board recognizes volunteers who have demonstrated their drive to achieve great things and push our organization to grow. In the past, awardees have been recognized for creating our scholarship program, spearheading the pivot to an online format for our cornerstone event during COVID, cultivating and expanding institutional support for professional members and collegiate members, and stepping into leadership roles with grace and professionalism.
+oSTEM is powered by the hard work and commitment of our volunteers. It is only with volunteers like this that oSTEM is able to continue our work of empowering LGBTQ+ people in STEM and setting them up for success in the personal, academic, and professional realms. If the work of these volunteers inspires you, consider volunteering your time, talent, and effort."
   elig={[
     "Must be an oSTEM Global Volunteer",
     "Must be attending the oSTEM Annual Conference"
@@ -255,7 +256,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
 
 Writing nominations can be a challenge. You may know this person or chapter is
 amazing and it's often difficult to express this in a few words. Here are some
-hints and tips to what makes a good nomination:
+hints and tips for what makes a good nomination:
 
 <div className="my-4">
 
@@ -284,7 +285,7 @@ hints and tips to what makes a good nomination:
 ### When are the winners announced?
 
 Winners will be announced via our social media and email. We will also be coming
-together to celebrate our winners in-person at the award ceremonies during our
+together to celebrate our winners in person at the award ceremonies during our
 annual conference this year in Anaheim, CA.
 
 ### Who decides the winners?
@@ -305,9 +306,9 @@ interest. All judging will take place in September.
   submitted to your name.
 - Judges will receive copies of nominations only; no information on the
   nominator will be shared.
-- You have the right to withdraw your nomination at any time prior to the
+- You have the right to withdraw your nomination at any time before the
   judging. Simply email membership@ostem.org.
 - All award winners will be published on our social media and website. You have
-  the right to opt out by emailing membership@ostem.org.
+  the right to opt-out by emailing membership@ostem.org.
 
 </SiteLayout>
