--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -39,7 +39,7 @@ Registration Milestones:
 
 <br />
 Ticket prices are subject to taxes and additional fees imposed by the registration
-platform and government authorities. Registration deadline was October 15, 2023.
+platform and government authorities. Registration deadline is October 15, 2023.
 
 **Want an oSTEM Member Discount?** Become one today to receive an additional
 membership discount, register on our
@@ -55,13 +55,13 @@ membership discount, register on our
     </tr>
     <tr>
         <td>Student</td>
-        <td>$155 / $225</td>
+        <td>$155 / $230</td>
         <td>$175 / $250</td>
         <td>$225 / $300</td>
     </tr>
     <tr>
         <td>Professional</td>
-        <td>$385 / $475</td>
+        <td>$385 / $485</td>
         <td>$425 / $525</td>
         <td>$500 / $600</td>
     </tr>
@@ -75,7 +75,7 @@ membership discount, register on our
 
 _The Student, Advisor, and Professional tickets are all-access passes to
 conference programming, events, and meals. oSTEM will provide Friday lunch and
-Saturday breakfast and a lunch voucher._
+Saturday breakfast and a lunch voucher for Saturday._
 
 </TopicSquare>
 
@@ -104,13 +104,11 @@ If you would like to recruit at oSTEM, please email sponsorship@ostem.org.
 
 </TopicSquare>
 
-### Sponsor / Exhibitor Registration
+### Exhibitor / Recruiter Registration
 
-**Sponsor and Exhibitor registration is OPEN for 2023. **
+**Exhibitor / Recruiter registration is OPEN for 2023. **
 
-This year's Exhibitors and Sponsors should have received a code that will allow
-you to register at the button below. If you are a sponsor or from a sponsoring
-organization and have questions, please reach out to sponsorship@ostem.org
+If you are a recruiter or exhibitor and have questions, please reach out to sponsorship@ostem.org
 
 ---
 
@@ -126,17 +124,14 @@ organization and have questions, please reach out to sponsorship@ostem.org
   </CTAButton>
 </div>
 
-**Room Rate:** $229/night up to four (4) occupants (does not include _14.95%_ of
-state & local taxes and fees)
+**Room Rate:** $229/night up to four (4) occupants (does not include state & local taxes and fees)
 
 - Check-in: 4:00 PM | Check-out: 12:00 PM
-- [Accessibility Information](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/#access:~:text=617%2D236%2D2000-,Accessible,-Hotel%20Features)
-- For further information please call the hotel at +1 617-236-2000
 
-The room-block rate ended on **October 15th**.
+The room-block rate ends on **October 15th**.
 
-For further accessibility questions or concerns, please contact
-access@ostem.org.
+For further registration and/or accessibility questions or concerns, please contact
+conference@ostem.org.
 
 ---
 
