--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -27,7 +27,7 @@ There are 4 attendee ticket types:
 - Student
 - Professional
 - Advisor
-- [Expo-Only](https://whova.com/embedded/exhibitor/SNc2J%40thQEVqUcP3e12zVKZLxJmuXxrYvZoEIzhRaow%3D/?utc_source=ems)
+- Expo-Only
 
 <br />
 Registration Milestones:
@@ -127,8 +127,7 @@ If you are a recruiter or exhibitor and have questions, please reach out to spon
 **Room Rate:** $229/night up to four (4) occupants (does not include state & local taxes and fees)
 
 - Check-in: 4:00 PM | Check-out: 12:00 PM
-
-The room-block rate ends on **October 15th**.
+- The room-block rate ends on **October 15th**.
 
 For further registration and/or accessibility questions or concerns, please contact
 conference@ostem.org.
