--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -126,7 +126,7 @@ If you are a recruiter or exhibitor and have questions, please reach out to spon
 
 **Room Rate:** $229/night up to four (4) occupants (does not include state & local taxes and fees)
 
-- Check-in: 4:00 PM | Check-out: 12:00 PM
+- Check-in: 4:00 PM | Check-out: 11:00 AM Pacific Time
 - The room-block rate ends on **October 15th**.
 
 For further registration and/or accessibility questions or concerns, please contact
