--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -116,6 +116,8 @@ If you are a recruiter or exhibitor and have questions, please reach out to spon
 
 ### [Anaheim Marriott](https://book.passkey.com/gt/219160066?gtid=cc97f7a6a077dc5ceb363d597f72a611)
 
+**All programming takes place in the Anaheim Marriott. For the best and most convenient conference experience, we recommend staying at the host hotel.**
+
 700 W Convention Way. <br /> Anaheim, CA 92802
 
 <div className="my-2">
