--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -110,6 +110,12 @@ If you would like to recruit at oSTEM, please email sponsorship@ostem.org.
 
 If you are a recruiter or exhibitor and have questions, please reach out to sponsorship@ostem.org
 
+<div className="my-2">
+  <CTAButton onClick="https://conference.ostem.org/2023/partnership">
+    Partner Opportunities
+  </CTAButton>
+</div>
+
 ---
 
 ## Hotel
