--- a/src/pages/2023/partnership.mdx
+++ b/src/pages/2023/partnership.mdx
@@ -4,7 +4,7 @@ import { AwardSquare } from "../../components/awards/AwardSquare";
 import { AwardCard } from "../../components/awards/AwardCard";
 import Image from "next/image";
 
-<SiteLayout title="Awards">
+<SiteLayout title="Partnerships">
 <div className="border-b-4 border-linen border-solid pb-4 mb-4 text-center">
   <p className="text-5xl font-display font-black">Partnership Opportunities</p>
 </div>
