--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -130,7 +130,7 @@ organization and have questions, please reach out to sponsorship@ostem.org.
 state & local taxes and fees)
 
 - Check-in: 4:00 PM | Check-out: 12:00 PM
-- [Accessibility Information](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/#access:~:text=617%2D236%2D2000-,Accessible,-Hotel%20Features)
+- [Accessibility Information](https://www.marriott.com/en-us/hotels/laxah-anaheim-marriott/overview/) Information is located at the bottom of the page in the "Property Details" section.
 - For further information please call the hotel at +1 617-236-2000
 
 The room-block rate ended on **October 15th**.
