--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -135,6 +135,7 @@ If you are a recruiter or exhibitor and have questions, please reach out to spon
 
 - Check-in: 4:00 PM | Check-out: 11:00 AM
 - The room-block rate ends on **October 15th**.
+- For more information about the physical features of Anaheim Marriott's accessible rooms, common areas or special services relating to a specific disability please call +1 714-750-8000.
 
 For further conference and/or accessibility questions or concerns, please contact conference@ostem.org.
 
