CFP Release Update

--- a/src/pages/2023/cfp.mdx
+++ b/src/pages/2023/cfp.mdx
@@ -19,10 +19,10 @@ to submit a poster for consideration. If you are interested in submitting a
 poster please do so at the button below.
 
 From the posters submitted, a number will be selected to give 10-minute oral
-presentations with time for Q&A during our research symposium sessions.  We will
+presentations with time for Q&A during our research symposium sessions. We will
 be accepting symposium presenters on a rolling basis after the deadline for this
 opportunity until all slots are filled. However, to be included in the published
-symposium book, there is a hard deadline of September 16.
+symposium book, there is a hard deadline of September 1.
 
 <div className="bg-tint-spruce-light text-2xl mt-4 p-8 rounded">
   <p className="flex items-center">
@@ -42,16 +42,16 @@ symposium book, there is a hard deadline of September 16.
     </svg>
     Our Call for Posters is open! Submit your poster today!
   </p>
-  <CTAButton onClick={"https://form.jotform.com/222158070005140"}>
+  <CTAButton onClick={"https://form.jotform.com/231806601803146"}>
     Submit a Poster
   </CTAButton>
 </div>{" "}
 
 ## Submission Milestones
 
-- Friday, June 9: Call for posters released
-- Friday, September 15: Deadline for Symposium
-- Friday, October 13: Final Deadline
+- Friday, June 30: Call for posters released
+- Friday, September 1: Deadline for Symposium
+- Friday, September 30: Final Deadline
 
 ## Poster Display and Awards
 
@@ -73,7 +73,7 @@ postdoc posters at the Saturday evening awards ceremony!
 
 - **How long will poster submissions be open for the conference?**
 
-  We will accept posters until October 13.
+  We will accept posters until September 30.
 
 - **I submitted my poster but never received a confirmation email. Did you
   receive my poster submission?**
@@ -89,7 +89,7 @@ postdoc posters at the Saturday evening awards ceremony!
   Expo. Can I still attend the expo and present a poster?**
 
   Yes! Please let the programming committee know that you plan on attending the
-  career fair and promptly arrive at the start of the session.  There will be
+  career fair and promptly arrive at the start of the session. There will be
   about 20 minutes to attend after the session is over if you need additional
   time.
 
@@ -111,7 +111,7 @@ postdoc posters at the Saturday evening awards ceremony!
 
 - **How will I know if my poster was accepted for the research symposium?**
 
-  The programming committee will contact those individuals who were accepted.
+  All submissions will receive an email mid October regarding whether or not their submissions have been accepted.
 
 - **Can I still present my poster if I wasn't accepted for the research
   symposium?**
@@ -127,7 +127,7 @@ postdoc posters at the Saturday evening awards ceremony!
 ## Additional Information
 
 For more information about the conference visit
-https://ostem.org/conference-2022.
+https://conference.ostem.org/.
 
 For more information about oSTEM visit https://ostem.org.
 
