--- a/src/pages/2023/rfp.mdx
+++ b/src/pages/2023/rfp.mdx
@@ -3,7 +3,7 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
 import { TopicSquare } from "../../components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Request for Proposals">
+<SiteLayout title="Request for Proposals Closed">
 
 <div className="border-b-4 border-chill-green border-solid pb-4 mb-4 text-center">
   <p className="text-5xl font-display font-black">Requests for Proposals</p>
@@ -25,7 +25,7 @@ import Image from "next/image";
 </div>
 
 - **Monday, April 3**: Request for Programming Released
-- **EXTENDED! Friday, June 30**: Deadline for Submissions
+- **Friday, June 30**: Deadline for Submissions
 - **Friday, July 14**: RFP Decision Notifications
 
 <div className="text-bright-peach font-bold">
@@ -127,7 +127,7 @@ There are three options for Program Submissions:
   This may be a resource you have found interesting or an issue that future STEM
   professionals could investigate. These talks will be 12 minutes long with 3
   minutes for questions. This is an excellent opportunity to give an oral
-  presentation if a 50 minute presentation is beyond the scope of your topic!
+  presentation if a 50-minute presentation is beyond the scope of your topic!
 
 <div className="text-bright-peach font-bold">
 
@@ -261,21 +261,6 @@ conference-programming@ostem.org
 <strong>NOTE:</strong> If you are unable to access the submission form due to
 technical issues please contact conference@ostem.org prior to sending a document
 or email submission.
-
-<div className="text-center text-3xl my-4">
-  <CTAButton
-    onClick="https://form.jotform.com/222764576640159"
-    backgroundColor="bright-peach"
-  >
-    Submit a Proposal
-  </CTAButton>
-</div>
-
-<div className="text-bright-peach font-bold">
-
-## Additional Information
-
-</div>
 
 For more information about oSTEM visit https://ostem.org.
 
