--- a/src/pages/2023/rfp.mdx
+++ b/src/pages/2023/rfp.mdx
@@ -3,10 +3,10 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
 import { TopicSquare } from "../../components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Request for Proposals Closed">
+<SiteLayout title="Request for Proposals">
 
 <div className="border-b-4 border-chill-green border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-black">Requests for Proposals</p>
+  <p className="text-5xl font-display font-black">Requests for Proposals Closed</p>
 </div>
 
 <Image
@@ -253,9 +253,6 @@ being selected.
 </ul>
 
 <br></br>
-
-For a downloadable list of questions required for submission please email
-conference-programming@ostem.org
 
 <br />
 <strong>NOTE:</strong> If you are unable to access the submission form due to
