--- a/src/pages/2023/cfp.mdx
+++ b/src/pages/2023/cfp.mdx
@@ -9,6 +9,15 @@ import Image from "next/image";
   <p className="text-5xl font-display font-black">Call for Posters</p>
 </div>
 
+<Image
+  src="/images/2022-11-12 oSTEM_0990.jpg"
+  alt=""
+  layout="responsive"
+  width="400"
+  height="180"
+  priority="true"
+/>
+
 Out in Science, Technology, Engineering, and Mathematics (oSTEM) is now
 accepting poster proposals for the in-person 13th Annual oSTEM Conference 2023.
 
