--- a/src/pages/2023/cfp.mdx
+++ b/src/pages/2023/cfp.mdx
@@ -10,7 +10,7 @@ import Image from "next/image";
 </div>
 
 <Image
-  src="/images/2022-11-12 oSTEM_0990.jpg"
+  src="/2023 cfp.png"
   alt=""
   layout="responsive"
   width="400"
