--- a/src/pages/2023/cfp.mdx
+++ b/src/pages/2023/cfp.mdx
@@ -10,7 +10,7 @@ import Image from "next/image";
 </div>
 
 <Image
-  src="/2023 cfp.png"
+  src="/images/2023 cfp.png"
   alt=""
   layout="responsive"
   width="400"
