--- a/src/pages/2023/rfp.mdx
+++ b/src/pages/2023/rfp.mdx
@@ -6,7 +6,7 @@ import Image from "next/image";
 <SiteLayout title="Request for Proposals">
 
 <div className="border-b-4 border-chill-green border-solid pb-4 mb-4 text-center">
-  <p className="text-5xl font-display font-black">Requests for Proposals Closed</p>
+  <p className="text-5xl font-display font-black">Requests for Proposals</p>
 </div>
 
 <Image
@@ -25,8 +25,10 @@ import Image from "next/image";
 </div>
 
 - **Monday, April 3**: Request for Programming Released
-- **Friday, June 30**: Deadline for Submissions
+- **Friday, June 30**: Deadline for Submissions - CLOSED
 - **Friday, July 14**: RFP Decision Notifications
+
+**oSTEM 2023 programming proposal submissions are now closed.** We received a record number of submissions this year, and our programming team is excited to review your program proposals. Communication on the next steps in the process will be emailed by Friday, July 14th.
 
 <div className="text-bright-peach font-bold">
 
@@ -42,7 +44,7 @@ import Image from "next/image";
   recruiters in STEM <br/>
 - Present on lived experiences and identities in addition to academic and
   professional development topics <br/>
-- Receive presenter acknowledgement in conference program book and on badge
+- Receive presenter acknowledgment in conference program book and on badge
   <br />
 
 <div className="text-bright-peach font-bold">
