--- a/src/pages/2023/cfp.mdx
+++ b/src/pages/2023/cfp.mdx
@@ -56,13 +56,16 @@ symposium book, there is a hard deadline of September 1.
   </CTAButton>
 </div>{" "}
 
+<div className="text-bright-peach font-bold">
 ## Submission Milestones
-
+</div>
 - Friday, June 30: Call for posters released
 - Friday, September 1: Deadline for Symposium
 - Friday, September 30: Final Deadline
 
+<div className="text-bright-peach font-bold">
 ## Poster Display and Awards
+</div>
 
 Posters will be on display to all conference attendees during the day on
 Saturday. Poster submitters will be asked to remain with their poster and
@@ -72,7 +75,9 @@ Graduate Fair Expo.
 Awards will be given out for the highest scoring undergraduate, graduate, and
 postdoc posters at the Saturday evening awards ceremony!
 
+<div className="text-bright-peach font-bold">
 ## F.A.Q
+</div>
 
 - **What are the recommended poster sizes?**
 
@@ -133,7 +138,9 @@ postdoc posters at the Saturday evening awards ceremony!
   on Saturday. Feel free to take a free moment to wander through the posters
   during the day.
 
+<div className="text-bright-peach font-bold">
 ## Additional Information
+</div>
 
 For more information about the conference visit
 https://conference.ostem.org/.
