--- a/src/pages/2023/cfp.mdx
+++ b/src/pages/2023/cfp.mdx
@@ -61,9 +61,9 @@ symposium book, there is a hard deadline of September 1.
 ## Submission Milestones
 
 </div>
-- Friday, June 30: Call for posters released
-- Friday, September 1: Deadline for Symposium
-- Friday, September 30: Final Deadline
+- **Friday, June 30**: Call for posters released
+- **Friday, September 1**: Deadline for Symposium
+- **Friday, September 30**: Final Deadline
 
 <div className="text-bright-peach font-bold">
 
@@ -76,8 +76,8 @@ Saturday. Poster submitters will be asked to remain with their poster and
 explain their research to interested attendees and judges during the Career and
 Graduate Fair Expo.
 
-Awards will be given out for the highest scoring undergraduate, graduate, and
-postdoc posters at the Saturday evening awards ceremony!
+Awards will be given out to the highest-scoring undergraduate, graduate, and
+postdoc posters!
 
 <div className="text-bright-peach font-bold">
 
@@ -131,7 +131,7 @@ postdoc posters at the Saturday evening awards ceremony!
 
 - **How will I know if my poster was accepted for the research symposium?**
 
-  All submissions will receive an email mid October regarding whether or not their submissions have been accepted.
+  All submissions will receive an email mid-October regarding whether or not their submissions have been accepted.
 
 - **Can I still present my poster if I wasn't accepted for the research
   symposium?**
