--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -18,7 +18,11 @@ us in a celebration of diversity across all fields.
 
 ---
 
+<div className="text-bright-peach font-bold">
+
 ## Conference and Expo Registration opening soon!
+
+</div>
 
 ### Attendee Registration
 
