--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -26,39 +26,33 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       <h3 className="p-4">Upcoming Dates</h3>
     </div>
     <p className="p-4">
-      Call for Posters Open: June 2023 <br />
-      Call for Chapter Award Nominations: Deadline is September 1, 2023 <br />
-      Early Bird Registration: July 2023 <br />
-      Full-Priced Registration: August 2023 <br />
-      Registration Deadline: October 15, 2023 <br />
+      **Call for Posters Open:** June 2023 <br />
+      **Call for Chapter Award Nominations:** Deadline is September 1, 2023 <br />
+      **Early Bird Registration:** Late July 2023 <br />
+      **Full-Priced Registration:** August 2023 <br />
+      **Registration Deadline:** October 15, 2023 <br />
     </p>
   </div>
   <div className="rounded-r md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-light-peach border-solid pb-4">
     <div className="bg-light-peach">
-      <h3 className="p-4">Request for Proposals</h3>
+      <h3 className="p-4">Call for Posters</h3>
     </div>
     <p className="p-4">
-      oSTEM's Annual Conference has, as a foundation, our exceptional
-      programming. Our conference offers a unique opportunity for LGBTQ+
-      individuals in STEM to present to an audience of peers. Come be a part of
-      the foundational experience by submitting a program this year! <br />
-      <br />
-      We've had presentations on identity issues, student leadership and career
-      development, and technical content. Examples include "Traveling while
-      Trans", "Hosting Campus Events & Collaborating with Campus Partners", and
-      "Life Lessons Looking Through Infrared Technology". If you've got a
-      program idea or a presentation you've given at other conferences or your
-      job/school consider presenting at oSTEM's Annual Conference.
+      The oSTEM Annual Conference Poster Session is intended for undergraduate students, graduate students, and postdocs to showcase their research to other conference attendees. Anyone performing academic or industry research is invited to submit a poster for consideration. If you are interested in submitting a poster please do so at the button below.
+
+Posters will be on display for all conference attendees during the day on Saturday. Poster submitters will be asked to remain with their poster and explain their research to interested attendees and judges during the Career and Graduate Fair Expo.
+
+Awards will be given out to the highest-scoring undergraduate, graduate, and postdoc posters!
       <br />
       <br />
       <b>
         {" "}
-        Deadline was extended to Friday, June 30th. Submit your proposal today!{" "}
+        Deadline is September 30, 2023 and will be accepted on a rolling basis.{" "}
       </b>
     </p>
     <div className="text-xl flex justify-center p-2">
-      <CTAButton onClick="/2023/rfp" backgroundColor="bright-peach">
-        Submit a Proposal
+      <CTAButton onClick="/2023/cfp" backgroundColor="bright-peach">
+        Submit a Poster
       </CTAButton>
     </div>
   </div>
