--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -26,11 +26,11 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       <h3 className="p-4">Upcoming Dates</h3>
     </div>
     <p className="p-4">
-      **Call for Posters Open:** June 2023 <br />
-      **Call for Chapter Award Nominations:** Deadline is September 1, 2023 <br />
-      **Early Bird Registration:** Late July 2023 <br />
-      **Full-Priced Registration:** August 2023 <br />
-      **Registration Deadline:** October 15, 2023 <br />
+      <b>Call for Posters Open:</b> June 2023 <br />
+      <b>Call for Chapter Award Nominations:</b> Deadline is September 1, 2023 <br />
+      <b>Early Bird Registration:</b> Late July 2023 <br />
+      <b>Full-Priced Registration:</b> August 2023 <br />
+      <b>Registration Deadline:</b> October 15, 2023 <br />
     </p>
   </div>
   <div className="rounded-r md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-light-peach border-solid pb-4">
@@ -39,10 +39,8 @@ import { SiteLayout } from "../components/layout/SiteLayout";
     </div>
     <p className="p-4">
       The oSTEM Annual Conference Poster Session is intended for undergraduate students, graduate students, and postdocs to showcase their research to other conference attendees. Anyone performing academic or industry research is invited to submit a poster for consideration. If you are interested in submitting a poster please do so at the button below.
-
-Posters will be on display for all conference attendees during the day on Saturday. Poster submitters will be asked to remain with their poster and explain their research to interested attendees and judges during the Career and Graduate Fair Expo.
-
-Awards will be given out to the highest-scoring undergraduate, graduate, and postdoc posters!
+      Posters will be on display for all conference attendees during the day on Saturday. Poster submitters will be asked to remain with their poster and explain their research to interested attendees and judges during the Career and Graduate Fair Expo.
+      Awards will be given out to the highest-scoring undergraduate, graduate, and postdoc posters!
       <br />
       <br />
       <b>
