--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -77,9 +77,17 @@ membership discount, register on our
     </tr>
 </table>
 
-_The Student, Advisor, and Professional tickets are all-access passes to
-conference programming, events, and meals. oSTEM will provide Friday lunch and
-Saturday breakfast and a lunch voucher for Saturday._
+Included with Student, Advisor & Professional Tickets above:
+- Friday lunch and Saturday breakfast and lunch voucher
+- Daily coffee and light refreshment breaks
+- Plenary sessions
+- Poster and workshop sessions
+- Affinity spaces
+- Gender-affirming clothing swap
+- Free wi-fi in the conference area
+- Conference mobile app
+- Career & Graduate School Expo access
+- Conference swag
 
 </TopicSquare>
 
