Add partner awards section

--- a/src/pages/2023/partnership.mdx
+++ b/src/pages/2023/partnership.mdx
@@ -124,20 +124,48 @@ Contact sponsorship@ostem.org to learn more.
 
 <br />
 
+</div>
+
 ---
+
+### <div>Partner Awards</div>
+
+<div className="mt-2">
+  Every year at the Annual Conference we recognize those who have demonstrated a
+  strong dedication to oSTEM, LGBTQ+ people in STEM, and STEM education.
+</div>
+
+<div className="flex flex-col items-center">
+
+<div className="font-bold text-xl mt-2">Partner Awards</div>
+
+Strategic Alliance Award - Organization
+
+Partner Excellence Award - Individual
+
+LGBTQ+ Employee Network of the Year – Group
 
 </div>
 
-<div className="mt-6">
-  <div className="text-center text-3xl font-bold">
-    Thank you to our 2022 Exhibitors!
-  </div>
-  <div className="text-center text-xl mt-2">
-    We hope to see you again this November!
-  </div>
+These prestigious awards are an opportunity to celebrate the achievements,
+leadership, and dedication of LGBTQ+ individuals and allies who have made a
+significant impact in our fields. We encourage you to nominate deserving
+individuals or projects that embody the spirit of inclusivity, innovation, and
+progress.
+
+<div className="my-1 pt-2 text-center">
+  <CTAButton
+    onClick="/2023/awards#sponsor-awards"
+    backgroundColor="rasp"
+    target="_self"
+  >
+    Visit our Awards page (Nominations close September 30th)
+  </CTAButton>
 </div>
 
 <br />
+
+---
 
 <div>
   <div title="Whova event and conference app" id="whova-exhibitorwidget">
