Minor fixes on CFP

--- a/src/pages/2023/cfp.mdx
+++ b/src/pages/2023/cfp.mdx
@@ -17,6 +17,7 @@ import Image from "next/image";
   height="180"
   priority="true"
 />
+<br />
 
 Out in Science, Technology, Engineering, and Mathematics (oSTEM) is now
 accepting poster proposals for the in-person 13th Annual oSTEM Conference 2023.
@@ -27,11 +28,9 @@ conference attendees. Anyone performing academic or industry research is invited
 to submit a poster for consideration. If you are interested in submitting a
 poster please do so at the button below.
 
-From the posters submitted, a number will be selected to give 10-minute oral
-presentations with time for Q&A during our research symposium sessions. We will
-be accepting symposium presenters on a rolling basis after the deadline for this
-opportunity until all slots are filled. However, to be included in the published
-symposium book, there is a hard deadline of September 1.
+We will be accepting symposium presenters on a rolling basis after the deadline
+for this opportunity until all slots are filled. However, to be included in the
+published symposium book, there is a hard deadline of September 1.
 
 <div className="bg-tint-spruce-light text-2xl mt-4 p-8 rounded">
   <p className="flex items-center">
@@ -63,7 +62,6 @@ symposium book, there is a hard deadline of September 1.
 </div>
 
 - **Friday, June 30**: Call for posters released
-- **Friday, September 1**: Deadline for Symposium
 - **Friday, September 30**: Final Deadline
 
 <div className="text-bright-peach font-bold">
@@ -119,25 +117,15 @@ postdoc posters!
   Unfortunately, oSTEM cannot print your poster. We advise that you travel with
   your poster.
 
-- **Do I have to participate in the research symposium to present a poster?**
-
-  Nope! Feel free to just participate in the poster session.
-
 - **How will I know if my poster was accepted for the poster session?**
 
-  Due to the interdisciplinary nature of oSTEM as an organization as well as the
-  programming committee, all submitted posters are accepted for the poster
-  session. You should receive an email during October confirming your poster
-  submission.
+  Posters will be accepted on a rolling basis and you will receive an email
+  prior to October to tell you the outcome of your poster submission.
 
 - **How will I know if my poster was accepted for the research symposium?**
 
-  All submissions will receive an email mid-October regarding whether or not their submissions have been accepted.
-
-- **Can I still present my poster if I wasn't accepted for the research
-  symposium?**
-
-  Of course!
+  All submissions will receive an email mid-October regarding whether or not
+  their submissions have been accepted.
 
 - **When can I set my poster up?**
 
@@ -151,8 +139,7 @@ postdoc posters!
 
 </div>
 
-For more information about the conference visit
-https://conference.ostem.org/.
+For more information about the conference visit https://conference.ostem.org/.
 
 For more information about oSTEM visit https://ostem.org.
 
