Add Sponsored Site Tour Tickets section to Registration Page

--- a/src/pages/2023/registration.mdx
+++ b/src/pages/2023/registration.mdx
@@ -108,24 +108,57 @@ If you would like to recruit at oSTEM, please email sponsorship@ostem.org.
 
 </TopicSquare>
 
+<TopicSquare title="Sponsored Site Tour Tickets" borderColor="border-apricot">
+  <table className="table-fixed text-center">
+    <tr>
+      <th>Ticket Type</th>
+      <th>Chevron El Segundo Refinery</th>
+      <th>Millennium Space (Boeing)</th>
+    </tr>
+    <tr>
+      <td>Friday, Nov 10</td>
+      <td>+ $15*</td>
+      <td>+ $15*</td>
+    </tr>
+  </table>
+
+Embark on a guided tour through our partner's facilities with this exclusive
+behind-the-scenes experience on Friday, November 10th from 8:30 A.M - 1:00 P.M.
+These tours are an opportunity to speak to industry experts and witness their
+operations first-hand.
+
+\* This ticket guarantees your spot on the tour including round-trip
+transportation, hand-held breakfast, and lunch.
+
+Some tours may only be open to U.S citizens and a government issued photo ID may
+be required. Site tour tickets will be available starting **September 4th** and
+can be added to your registration retroactively. Please check back as other tour
+options will be added.
+
+</TopicSquare>
+
 ### Exhibitor / Recruiter Registration
 
 **Exhibitor / Recruiter registration is OPEN for 2023. **
 
-If you are a recruiter or exhibitor and have questions, please reach out to sponsorship@ostem.org.
+If you are a recruiter or exhibitor and have questions, please reach out to
+sponsorship@ostem.org.
 
 <div className="my-2">
   <CTAButton onClick="https://conference.ostem.org/2023/partnership">
     Partner Opportunities
   </CTAButton>
 </div>
+<br />
+
 ---
 
 ## Hotel
 
 ### [Anaheim Marriott](https://book.passkey.com/gt/219160066?gtid=cc97f7a6a077dc5ceb363d597f72a611)
 
-**All programming will happen in the Anaheim Marriott. For the best and most convenient conference experience, we recommend lodging at the host hotel.**
+**All programming will happen in the Anaheim Marriott. For the best and most
+convenient conference experience, we recommend lodging at the host hotel.**
 
 700 W Convention Way. <br /> Anaheim, CA 92802
 
@@ -135,13 +168,17 @@ If you are a recruiter or exhibitor and have questions, please reach out to spon
   </CTAButton>
 </div>
 
-**Room Rate:** $229/night up to four (4) occupants (does not include state & local taxes and fees)
+**Room Rate:** $229/night up to four (4) occupants (does not include state &
+local taxes and fees)
 
 - Check-in: 4:00 PM | Check-out: 11:00 AM
 - The room-block rate ends on **October 15th**.
-- For more information about the physical features of Anaheim Marriott's accessible rooms, common areas or special services relating to a specific disability please call +1 714-750-8000.
+- For more information about the physical features of Anaheim Marriott's
+  accessible rooms, common areas or special services relating to a specific
+  disability please call +1 714-750-8000.
 
-For further conference and/or accessibility questions or concerns, please contact conference@ostem.org.
+For further conference and/or accessibility questions or concerns, please
+contact conference@ostem.org.
 
 ---
 
