Add nominationClosed attribute for award buttons

--- a/src/pages/2023/awards.mdx
+++ b/src/pages/2023/awards.mdx
@@ -228,6 +228,7 @@ oSTEM is powered by the hard work and commitment of our volunteers. It is only w
   ]}
   borderColor="border-green-500"
   awardDetailUrl="/2023/awards-volunteer"
+  nominationClosed={true}
 />
 
 <br />
@@ -306,8 +307,8 @@ interest. All judging will take place in September.
   submitted to your name.
 - Judges will receive copies of nominations only; no information on the
   nominator will be shared.
-- You have the right to withdraw your nomination at any time before the
-  judging. Simply email membership@ostem.org.
+- You have the right to withdraw your nomination at any time before the judging.
+  Simply email membership@ostem.org.
 - All award winners will be published on our social media and website. You have
   the right to opt-out by emailing membership@ostem.org.
 
