--- a/src/pages/2023/awards.mdx
+++ b/src/pages/2023/awards.mdx
@@ -157,7 +157,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   desc="This award recognizes those advisors who have gone above and beyond in their support to one or more oSTEM chapters. The guiding purpose of the oSTEM organization is to empower LGBTQ+ people in STEM to succeed personally, academically, and professionally by cultivating environments and communities that nurture innovation, leadership, and advocacy. Our chapter's advisors support our chapters in succeeding in this mission. Their enthusiasm, advice, and dedication models the way for our chapters. If your advisor has made a significant effort toward achieving these goals on your campus and in your community we ask you to nominate them so they can be recognized for their effort."
   elig={[
     "Must be an advisor of a verified Standard oSTEM Chapter or Affiliate Chapter of active status in good standing with your Regional Coordinator",
-    "Must be attending the oSTEM Annual Conference. (Winner receives 1 free professional registration + 3 free student registrations."
+    "Must be attending the oSTEM Annual Conference. (Winner receives 1 free advisor registration + 3 free student registrations."
   ]}
   borderColor="border-blue-500"
   alert="Self-nominations are accepted and encouraged. If you have any questions regarding this application, please contact us at membership@ostem.org."
